test_files/bad/bad_request.ru
def A "aa" "bb"

A + V => C

=AV
?"aa""C&"